[MODORDERS-472] - Potentially incorrect number of units/price display in order cost details (#410)
* [MODORDERS-472] - Init commit

* [MODORDERS-472] - Update tests